metadata/force-app/main/default/objects/CustomName_PmxNu__c/CustomName_PmxNu__c.object-meta.xml
<CustomObject>
    <description>Description_KeThx</description>
    <label>CustomLabel_XFpgI</label>
    <nameField>
        <label>CustomLabel_XFpgI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_XFpgIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>