metadata/force-app/main/default/objects/CustomName_PmxNu__c/fields/CustomField_AHzkS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_AHzkS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldSwmnR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>